syntax = "proto3";

option java_package = "com.kihong.chat";
option java_outer_classname = "ChatProto";

service ChatService {
  rpc sendMessage (stream ChatMessageRequest) returns (stream ChatMessageResponse);
}

message ChatMessageRequest {
  string message = 1;
  int64 timestamp = 2;
  MessageType type = 3;

  enum MessageType {
    CHAT = 0;
    ENTER = 1;
    EXIT = 2;
    DOWNLOAD = 3;
  }
}

message ChatMessageResponse {
  string username = 1;
  string message = 2;
  int64 timestamp = 3;
  MessageType type = 4;

  enum MessageType {
    CHAT = 0;
    ENTER = 1;
    EXIT = 2;
    DOWNLOAD = 3;
  }
}